version 0.1.0 - Bugfixing, Hardening and so on ...
Version 0.0.9 - Added experimental Atom - Reading
Version 0.0.8 - Rewrite the Caching-Algorithm. Moving from XML files to "pickle"-Files. The opml-file won't be changed enymore.
                If a publishing-date is given, it will be displayed in the menu
                minor bugfixes
Version 0.0.71 - Add: Contextmenu to force a reload
Version 0.0.7 - Bugfixing: RSS Feeds synchronized correctly
Version 0.0.6 - Reseting Playlist before adding new items
Version 0.0.5 - Minor bugfixes
Version 0.0.4 - Quick fix - while downloading new feeds, readed articels aren't resetet
Version 0.0.3 - Complete Code-Rewrite
  * CodeCleanup for a more flexible code to be aware of upcoming formats.
  * Performance-Improvements:
    - Instead of showing "how many" unread-items exist, only the information that there are unread items are shown. Therefore i only have to find the first unread-item instead of all unreaditems.
    - Implemention of a more intelligent "loading algoritm". Additional (extern) feed-files are only readed if needed and will be cached. Refreshtimes can be defined per feed.
  * Add "Play all unread" - ok that should be in 0.0.2 but i missed it ;)
  * thge plugin take care of all possible media-info (but xbmc doesn't)
Version 0.0.2 - Initial Release