@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon
   id="plugin.audio.podcatcher"
-  version="0.0.92"
+  version="0.0.93"
   name="AudioPodcaster"
   provider-name="Raptor 2101 [raptor2101@gmx.de]">
   <requires>
