@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <strings>
-    <!-- Main -->
+    <string id="1000">OPML-Datei</string>
     <string id="1010">Alles als gelesen markieren</string>
     <string id="1011">Alles ungelesene abspielen</string>
     <string id="1020">Als gelesen markieren</string>
